--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
     "main": "index.js",
     "bin": "index.js",
     "dependencies": {
-        "@inquirer/prompts": "^7.7.1",
         "cheerio": "^1.1.2",
-        "ws": "^7.5.10"
+        "ws": "^8.18.3"
     },
     "devDependencies": {
         "@types/bun": "latest"
@@ -24,7 +23,7 @@
         "osu",
         "rich-presence",
         "discord-rpc-client",
-        "gosumemory"
+        "tosu"
     ],
     "author": "KallelGaNewk",
     "license": "MIT",
@@ -33,6 +32,6 @@
     },
     "homepage": "https://github.com/4samsamAC/osu-rpc#readme",
     "peerDependencies": {
-        "typescript": "^5.0.0"
+        "typescript": "^5.8.3"
     }
 }
